[package]
name = "bevy_museum"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
  # 2d
  "2d_bevy_render",
  "default_app",
  "picking",
  "scene",

  # 3d
  "3d_bevy_render",

  # ui
  "ui_api",
  "ui_bevy_render",

  # default_platform
  "android-game-activity",
  "bevy_gilrs",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "dynamic_linking",
  "std",
  "sysinfo_plugin",
  "wayland",
  "webgl2",
  "x11",
] }


bevy_skein = "0.5"
rand = "0.9.2"
bevy-inspector-egui = "0.36.0"
avian3d = {version = "0.5", features = ["diagnostic_ui"]}
bevy_asset_loader = "0.25.0"
bevy_seedling = "0.7.0"

[dev-dependencies]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"


[[bench]]
name = "my_benchmark"
harness = false
